Create basic list and detail view

--- a/webapp/.eslintrc
+++ b/webapp/.eslintrc
@@ -27,7 +27,8 @@
       {
         "capIsNewExceptions": [
           "List",
-          "Map"
+          "Map",
+          "Record"
         ]
       }
     ],
