--- a/webapp/package.json
+++ b/webapp/package.json
@@ -62,7 +62,10 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.17.0",
+    "@material-ui/icons": "^1.0.0-beta.43",
+    "apollo-cache-inmemory": "^1.2.0",
+    "apollo-client": "^2.3.0",
+    "apollo-link-http": "^1.5.4",
     "babel-polyfill": "6.26.0",
     "chalk": "2.3.1",
     "compression": "1.7.1",
@@ -70,6 +73,8 @@
     "es5-shim": "^4.5.9",
     "express": "4.16.2",
     "fontfaceobserver": "2.0.13",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
     "http-status-codes": "^1.3.0",
     "immutable": "3.8.2",
@@ -78,11 +83,13 @@
     "lodash.defaultsdeep": "^4.6.0",
     "lodash.pullall": "^4.2.0",
     "lodash.uniq": "^4.5.0",
+    "material-ui": "next",
     "minimist": "1.2.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.0",
     "ramda": "^0.25.0",
+    "randomcolor": "^0.5.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-helmet": "5.2.0",
@@ -139,6 +146,7 @@
     "eslint-watch": "^3.1.2",
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "0.7.0",
+    "express-http-proxy": "^1.2.0",
     "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "1.1.6",
     "html-loader": "0.5.5",
