--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,12 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^2.24.0",
+    "http": "0.0.0",
     "mysql": "^2.15.0",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "subscriptions-transport-ws": "^0.9.8"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
