--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - db_data:/var/lib/mysql
     expose:
       - "3306"
+    ports:
+      - "3306:3306"
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: shopping_list
@@ -32,6 +34,8 @@ services:
       context: ./server
     expose:
       - "5000"
+    ports:
+      - "5000:5000"
     volumes:
       - ./server:/app
 
